# ereader

./: LICENSE  README.md
UI_Export/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_BookSelection.c  ui_BookSelection.h  ui_MainMenu.c  ui_MainMenu.h  ui_ReadingScreen.c  ui_ReadingScreen.h  ui_comp_hook.c  ui_events.h  ui_font_Font1.c  ui_font_bookTime.c  ui_font_clockFont.c  ui_font_clockFont1.c  ui_helpers.c  ui_helpers.h  ui_img_battery_android_frame_full_20dp_000000_fill0_wght400_grad0_opsz20_png.c  ui_img_battery_android_frame_full_20dp_ffffff_fill0_wght400_grad0_opsz20_png.c  ui_img_book_17dp_ffffff_fill0_wght400_grad0_opsz20_png.c  ui_img_car_png.c  ui_img_heart_smile_20dp_ea3323_fill0_wght400_grad0_opsz20_png.c  ui_img_nest_clock_farsight_analog_17dp_ffffff_fill0_wght400_grad0_opsz20_png.c  ui_img_output_png.c
main/: battery.cpp  battery.h  booklist.cpp  booklist.h  buttons.cpp  buttons.h  config.h  epaper.cpp  epaper.h  main.ino  reader.cpp  reader.h  rtc.cpp  rtc.h  sdcard.cpp  sdcard.h  ui_export_bookselection.c  ui_export_booktime.c  ui_export_bridge.c  ui_export_bridge.cpp  ui_export_clockfont.c  ui_export_clockfont1.c  ui_export_comp_hook.c  ui_export_font1.c  ui_export_helpers.c  ui_export_img_battery_black.c  ui_export_img_battery_white.c  ui_export_img_book.c  ui_export_img_car.c  ui_export_img_clock.c  ui_export_img_heart.c  ui_export_img_output.c  ui_export_mainmenu.c  ui_export_readingscreen.c  ui_export_ui.c  utils.cpp  utils.h
